# HomeWorkML

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
HW1/: README.md
HW1/data/: cleaned_test_before_ohe.csv  cleaned_test_data_after_ohe.csv  cleaned_train_before_ohe.csv  cleaned_train_data_after_ohe.csv
HW1/models/: best_model_bundle.pkl
HW1/notebooks/: HW1_Regression_with_inference_base.ipynb
HW1/pandas_profiler/: auto_price_report.html
HW1/src/: app.py
HW1/utils/: eda_plots.py
