[project]
name = "homeworkml"
version = "0.1.0"
description = ""
authors = [
    { name = "Данил Краснов", email = "daankrasnov@edu.hse.ru" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "pandas-stubs (>=2.3.3.251201,<3.0.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]

[tool.poetry.scripts]
start = "streamlit:run app.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
